--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#作业">作业</a></li>
 								<li><a href="#课程">课程</a></li>
 								<li><a href="#日常">日常</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#建议">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
