--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">关于</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/WX20181129-155725@2x.png" alt="" /></span>
 								<p>信号与系统是大学本科层次电子信息类的专业课，本课程是计算机科学与技术、信息与通信工程、电子科学与技术、光学工程、仪器科学与技术、电气工程、控制科学与工程、测绘科学与技术等国家一级学科在大学本科阶段的专业必修课。</p>
 							</article>
 
