--- a/index.html
+++ b/index.html
@@ -53,7 +53,42 @@
 							<article id="work">
 								<h2 class="major">大作业</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<p>连续时间实指数信号
+
+									import numpy as np 
+									import matplotlib as mpl
+									import matplotlib.pyplot as plt
+									import mpl_toolkits.axisartist as axisartist
+									fig = plt.figure()
+									ax = axisartist.Subplot(fig, 111) 
+									fig.add_axes(ax)
+									ax.axis[:].set_visible(False)
+									ax.axis["x"] = ax.new_floating_axis(0,-0.8)
+									ax.axis["x"].set_axisline_style("->", size = 1.0)
+									ax.axis["y"] = ax.new_floating_axis(1,0)
+									ax.axis["y"].set_axisline_style("-|>", size = 1.0)
+									ax.axis["x"].set_axis_direction("top")
+									ax.axis["y"].set_axis_direction("right") 
+									t = np.arange(-5,5,0.1)
+									s = 0.5
+									y = np.e**(s*t)
+									s = -0.5
+									y_1 = np.e**(s*t)
+									s = 0
+									y_2 = np.e**(s*t)
+									plt.title(r'$x(t)=Ce^{st},s=\sigma+jw_0$')
+									plt.xticks([])
+									plt.yticks([])
+									plt.ylim(-0.8,10)
+									plt.text(0,-1.2,'0',fontdict={'size':16})
+									plt.text(5.5,-1.2,'t',fontdict={'size':16})
+									plt.text(4,7,r'$\sigma>0$',fontdict={'size':16})
+									plt.text(-5.5,7,r'$\sigma<0$',fontdict={'size':16})
+									plt.text(0,1.5,'C',fontdict={'size':16})
+									plt.plot(t,y)
+									plt.plot(t,y_1)
+									plt.plot(t,y_2)
+									plt.show()</p></0>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
