--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">大作业</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/图1-11.png" alt="" /></span>
 								<p>连续时间实指数信号</p>
 
 									<p>import numpy as np</p> 
