--- a/index.html
+++ b/index.html
@@ -94,41 +94,99 @@
 							<span class="image main"><img src="images/图1-13.png" alt="" /></span>
 							<p>连续时间实指数信号</p>
 
-								<p>import numpy as np</p> 
-								<p>import matplotlib as mpl</p>
-								<p>import matplotlib.pyplot as plt</p>
-								<p>import mpl_toolkits.axisartist as axisartist</p>
-								<p>fig = plt.figure()</p>
-								<p>ax = axisartist.Subplot(fig, 111)</p> 
-								<p>fig.add_axes(ax)</p>
-								<p>ax.axis[:].set_visible(False)</p>
-								<p>ax.axis["x"] = ax.new_floating_axis(0,-0.8)</p>
-								<p>ax.axis["x"].set_axisline_style("->", size = 1.0)</p>
-								<p>ax.axis["y"] = ax.new_floating_axis(1,0)</p>
-								<p>ax.axis["y"].set_axisline_style("-|>", size = 1.0)</p>
-								<p>ax.axis["x"].set_axis_direction("top")</p>
-								<p>ax.axis["y"].set_axis_direction("right")</p> 
-								<p>t = np.arange(-5,5,0.1)</p>
-								<p>s = 0.5</p>
-								<p>y = np.e**(s*t)</p>
-								<p></p>s = -0.5</p>
-								<p></p>y_1 = np.e**(s*t)</p>
-								<p></p>s = 0</p>
-								<p></p>y_2 = np.e**(s*t)</p>
-								<p></p>plt.title(r'$x(t)=Ce^{st},s=\sigma+jw_0$')</p>
-								<p></p>plt.xticks([])</p>
-								<p></p>plt.yticks([])</p>
-								<p></p>plt.ylim(-0.8,10)</p>
-								<p></p>plt.text(0,-1.2,'0',fontdict={'size':16})</p>
-								<p></p>plt.text(5.5,-1.2,'t',fontdict={'size':16})</p>
-								<p></p>plt.text(4,7,r'$\sigma>0$',fontdict={'size':16})</p>
-								<p></p>plt.text(-5.5,7,r'$\sigma<0$',fontdict={'size':16})</p></0>
-								<p></0>plt.text(0,1.5,'C',fontdict={'size':16})</p>
-									<p>plt.plot(t,y)</p>
-										<p>plt.plot(t,y_1)</p>
-											<p>plt.plot(t,y_2)</p>
-												<p>plt.show()</p></0>
-							<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+							<p>import numpy as np </p>
+
+							<p>pandas as pd</p>
+							<p>import matplotlib.pyplot as plt</p>
+							<p>import matplotlib </p>
+							<p>font = {'family':'SimHei'} </p>
+							<p>matplotlib.rc('font',**font)</p> 
+							<p>matplotlib.rcParams['axes.unicode_minus']=False</p>
+							<p>fig = plt.figure()</p>
+							<p>plt.subplot(3,2,1)</p>
+							<p>ax = plt.gca() </p>
+							<p>ax.spines['right'].set_color('none')</p>
+							<p>ax.spines['top'].set_color('none')</p> 
+							<p>ax.xaxis.set_ticks_position('bottom')</p> 
+							<p>ax.spines['bottom'].set_position(('data', 0))</p>
+							<p>ax.yaxis.set_ticks_position('left')</p> 
+							<p>ax.spines['left'].set_position(('data', 0.6))</p> 
+							<p>plt.xticks([2],[r'$T_1$'])</p>
+							<p>plt.yticks([])</p>
+							<p>plt.title(r'$x_1(t)=\cos(w_1t)$')</p>
+							<p>x = np.arange(-3,5,0.1)</p>
+							<p>y = np.cos(5*x)</p>
+							<p>plt.plot(x,y,color='black')</p>
+							<p>plt.subplot(3,2,2)</p>
+							<p>ax = plt.gca() </p>
+							<p>ax.spines['right'].set_color('none') </p>
+							<p>ax.spines['top'].set_color('none') </p>
+							<p>ax.xaxis.set_ticks_position('bottom') </p>
+							<p>ax.spines['bottom'].set_position(('data', 0)) </p>
+							<p>ax.yaxis.set_ticks_position('left') </p>
+							<p>ax.spines['left'].set_position(('data', 0.6)) </p>
+							<p>plt.xticks([2],[r'$T_1$'])</p>
+							<p>plt.yticks([])</p>
+							<p>plt.title('$x_1(t)=\cos(w_1t)$''的傅里叶变换')</p>
+							<p>x = np.arange(-3,5,0.1)</p>
+							<p>y = np.cos(5*x)</p>
+							<p>plt.plot(x,np.fft.fft(y),color='black') </p>
+							<p>plt.subplot(3,2,3)</p>
+							<p>ax = plt.gca() </p>
+							<p>ax.spines['right'].set_color('none') </p>
+							<p>ax.spines['top'].set_color('none')</p>
+							<p></p>
+							<p>ax.xaxis.set_ticks_position('bottom') </p>
+							<p>ax.spines['bottom'].set_position(('data', 0)) </p>
+							<p>ax.yaxis.set_ticks_position('left') </p>
+							<p>ax.spines['left'].set_position(('data', 0.6)) </p>
+							<p>plt.xticks([2],[r'$T_2$'])</p>
+							<p>plt.yticks([])</p>
+							<p>plt.title(r'$x_2(t)=\cos(w_2t)$')</p>
+							<p>x = np.arange(-3,5,0.1)</p>
+							<p>y = np.cos(3*x)</p>
+							<p>plt.plot(x,y,color='black')</p>
+							<p>plt.subplot(3,2,4)</p>
+							<p>ax = plt.gca() </p>
+							<p>ax.spines['right'].set_color('none') </p>
+							<p>ax.spines['top'].set_color('none') </p>
+							<p>ax.xaxis.set_ticks_position('bottom') </p>
+							<p>ax.spines['bottom'].set_position(('data', 0))</p>
+								<p>ax.yaxis.set_ticks_position('left') </p>
+								<p>ax.spines['left'].set_position(('data', 0.6)) </p>
+								<p>plt.xticks([2],[r'$T_2$'])</p>
+								<p>plt.yticks([])</p>
+								<p>plt.title('$x_2(t)=\cos(w_2t)$''的傅里叶变换')</p>
+								<p>	x = np.arange(-3,5,0.1)</p>
+								<p>y = np.cos(3*x)</p>
+								<p>plt.plot(x,np.fft.fft(y),color='black') </p>
+								<p>plt.subplot(3,2,5)</p>
+								<p>ax = plt.gca() </p>
+								<p>ax.spines['right'].set_color('none') </p>
+								<p>ax.spines['top'].set_color('none') </p>
+								<p>ax.xaxis.set_ticks_position('bottom') </p>
+								<p>ax.spines['bottom'].set_position(('data', 0)) </p>
+								<p>ax.yaxis.set_ticks_position('left')</p>
+								<p>ax.spines['left'].set_position(('data', 0.6)) </p>
+								<p>plt.xticks([2],[r'$T_3$'])</p>
+								<p>plt.yticks([])</p>
+								<p>plt.title(r'$x_3(t)=\cos(w_3t)$')</p>
+								<p>x = np.arange(-3,5,0.1)</p>
+								<p>y = np.cos(x)</p>
+								<p>plt.plot(x,y,color='black')</p>
+								<p>plt.subplot(3,2,6)</p>
+								<p>ax = plt.gca() </p>
+								<p>ax.spines['right'].set_color('none') </p>
+								<p>ax.spines['top'].set_color('none') </p>
+								<p>ax.xaxis.set_ticks_position('bottom') </p>
+								<p>ax.spines['bottom'].set_position(('data', 0)) </p>
+								<p>ax.yaxis.set_ticks_position('left') ax.spines['left'].set_position(('data', 0.6)) plt.xticks([2],[r'$T_3$'])</p>
+								<p>plt.yticks([])</p>
+								<p>plt.title('$x_3(t)=\cos(w_3t)$''的傅里叶变换')</p>
+								<p>x = np.arange(-3,5,0.1)</p>
+								<p>y = np.cos(x)</p>
+								<p>plt.plot(x,np.fft.fft(y),color='black') </p>
+								<p>plt.show()</p>
 						</article>
 
 						<!-- About -->
