--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 
 							<span class="image main"><img src="images/图1-13.png" alt="" /></span>
-							<p>连续时间实指数信号</p>
+							<p>连续时间正弦信号基波频率与周期的关系（$w_1>w_2>w_3$）</p>
 
 							<p>import numpy as np </p>
 
