--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">大作业</h2>
+								p{
+									line-height: 20px;
+									font-size: 20px;
+									}
 								<span class="image main"><img src="images/图1-11.png" alt="" /></span>
 								<p>连续时间实指数信号</p>
-
+								 
 									<p>import numpy as np</p> 
 									<p>import matplotlib as mpl</p>
 									<p>import matplotlib.pyplot as plt</p>
@@ -89,7 +93,6 @@
 											<p>plt.plot(t,y_1)</p>
 												<p>plt.plot(t,y_2)</p>
 													<p>plt.show()</p></0>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 
 							<span class="image main"><img src="images/图1-13.png" alt="" /></span>
 							<p>连续时间正弦信号基波频率与周期的关系（$w_1>w_2>w_3$）</p>
