--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@
 								<p>ax.spines['top'].set_color('none') </p>
 								<p>ax.xaxis.set_ticks_position('bottom') </p>
 								<p>ax.spines['bottom'].set_position(('data', 0)) </p>
-								<p>ax.yaxis.set_ticks_position('left') ax.spines['left'].set_position(('data', 0.6)) plt.xticks([2],[r'$T_3$'])</p>
-								plt.yticks([])</p>
+								<p>ax.yaxis.set_ticks_position('left') </p>
+									<p>ax.spines['left'].set_position(('data', 0.6)) plt.xticks([2],[r'$T_3$'])</p>
+								<p>plt.yticks([])</p>
 								<p>plt.title('$x_3(t)=\cos(w_3t)$''的傅里叶变换')</p>
 								<p>x = np.arange(-3,5,0.1)</p>
 								<p>y = np.cos(x)</p>
