--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article id="work">
 								<h2 class="major">大作业</h2>
 								<span class="image main"><img src="images/图1-11.png" alt="" /></span>
-								<p>连续时间实指数信号</p>
+								<h2>连续时间实指数信号</h2>
 								 
 									<p>import numpy as np</p> 
 									<p>import matplotlib as mpl</p>
@@ -91,7 +91,7 @@
 													<p>plt.show()</p></0>
 
 							<span class="image main"><img src="images/图1-13.png" alt="" /></span>
-							<p>连续时间正弦信号基波频率与周期的关系（$w_1>w_2>w_3$）</p>
+							<h2>连续时间正弦信号基波频率与周期的关系（$w_1>w_2>w_3$）</h2>
 
 							<p>import numpy as np </p>
 
