--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 													<p>plt.show()</p></0>
 
 							<span class="image main"><img src="images/图1-13.png" alt="" /></span>
+                            
 							<h2>连续时间正弦信号基波频率与周期的关系（$w_1>w_2>w_3$）</h2>
 
 							<p>import numpy as np </p>
@@ -187,6 +188,52 @@
 								<p>y = np.cos(x)</p>
 								<p>plt.plot(x,np.fft.fft(y),color='black') </p>
 								<p>plt.show()</p>
+                                
+                                <h2>单位阶跃函数及其傅里叶变换</h2>
+                                <p>import numpy as np</p>
+                                <p>import pandas as pd</p>
+                                <p>import matplotlib.pyplot as plt</p>
+                                <p>import matplotlib</p>
+                                <p>font = {'family':'SimHei'}</p>
+                                <p>matplotlib.rc('font',**font)</p>
+                                <p>matplotlib.rcParams['axes.unicode_minus']=False</p>
+                                <p>fig = plt.figure()</p>
+                                <p>plt.subplot(1,2,1)</p>
+                                <p>ax = plt.gca()</p>
+                                <p>ax.spines['right'].set_color('none')</p>
+                                <p>ax.spines['top'].set_color('none')</p>
+                                <p>ax.xaxis.set_ticks_position('bottom')</p>
+                                <p>ax.spines['bottom'].set_position(('data', 0))</p>
+                                <p>ax.yaxis.set_ticks_position('left')</p>
+                                <p>ax.spines['left'].set_position(('data', 0))</p>
+                                <p>t = np.arange(-10,10,0.1)</p>
+                                <p>y=0*(t<0)+1*(t>=0)</p>
+                                <p>plt.text(0,-0.08,'O',fontdict={'size':16})</p>
+                                <p>plt.text(10,-0.08,'t',fontdict={'size':16})</p>
+                                <p>plt.text(0,1.5,'u(t)',fontdict={'size':16})</p>
+                                <p>plt.xticks([])</p>
+                                <p>plt.yticks([])</p>
+                                <p>plt.ylim(0,1.5)</p>
+                                <p>plt.plot(t,y)</p>
+                                <p>plt.subplot(1,2,2)</p>
+                                <p>ax = plt.gca()</p>
+                                <p>ax.spines['right'].set_color('none')</p>
+                                <p>ax.spines['top'].set_color('none')</p>
+                                <p>ax.xaxis.set_ticks_position('bottom')</p>
+                                <p>ax.spines['bottom'].set_position(('data', -0.5))</p>
+                                <p>ax.yaxis.set_ticks_position('left')</p>
+                                <p>ax.spines['left'].set_position(('data', 0))</p>
+                                <p>plt.xticks([])</p>
+                                <p>plt.yticks([])</p>
+                                <p>plt.text(0,-0.5,'O',fontdict={'size':16})</p>
+                                <p>plt.text(0.75,-0.5,r'$\omega$',fontdict={'size':16})</p>
+                                <p>plt.text(0,1,'u(t)',fontdict={'size':16})</p>
+                                <p>t = np.arange(-1,1,0.1)</p>
+                                <p>y=0*(t<0)+1*(t>=0)</p>
+                                <p>plt.xlim(-0.75,0.75)</p>
+                                <p>plt.ylim(-2,1)</p>
+                                <p>plt.plot(t,np.fft.fft(y))</p>
+                                <p>plt.show()</p>
 						</article>
 
 						<!-- About -->
