--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 								<p>plt.plot(x,np.fft.fft(y),color='black') </p>
 								<p>plt.show()</p>
                                 
+                                <span class="image main"><img src="images/图1-17.png" alt="" /></span>
                                 <h2>单位阶跃函数及其傅里叶变换</h2>
                                 <p>import numpy as np</p>
                                 <p>import pandas as pd</p>
