--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article id="work">
 								<h2 class="major">大作业</h2>
 								<h2>连续时间实指数信号</h2>
-								 <span class="image main"><img src="images/图1-11.png" alt="" /></span>
+								 <span class="image main"><img src="images/连续时间实指数信号.png" alt="" /></span>
 									<p>import numpy as np</p> 
 									<p>import matplotlib as mpl</p>
 									<p>import matplotlib.pyplot as plt</p>
@@ -91,7 +91,7 @@
                                                     <p></p>
                                 
                                 <h2>单位阶跃函数及其傅里叶变换</h2>
-                                <span class="image main"><img src="images/图1-17.png" alt="" /></span>
+                                <span class="image main"><img src="images/单位阶跃函数及其傅里叶变换.png" alt="" /></span>
                                 <p>import numpy as np</p>
                                 <p>import pandas as pd</p>
                                 <p>import matplotlib.pyplot as plt</p>
